fix: Fix scrollbar issue

--- a/client/components/App/Library.scss
+++ b/client/components/App/Library.scss
@@ -5,11 +5,14 @@
 
   > div {
     position: absolute;
-    overflow-y: hidden;
     width: 100%;
     height: 100%;
     visibility: hidden;
     pointer-events: none;
+
+    &:not(#media-viewer) {
+      overflow-y: hidden;
+    }
 
     &:last-child {
       visibility: inherit;
